--- a/_includes/head.htm
+++ b/_includes/head.htm
@@ -82,3 +82,5 @@
 {% include embed_slides_custom_style.htm %}
 
 {% endif %}
+<!-- Umami Analytics -->
+<script defer src="https://analytics.vsp.ink/script.js" data-website-id="47d7ae46-3c2d-49dd-b869-a46f73d094bf"></script>
