--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -24,7 +24,7 @@
 --> 
 
 <div class="m-3 text-center text-body-secondary">
-<p><a href="/">VSP.ink</a>, <a href="https://social.vsp.ink/@Jacob">social</a>, <a href="/now">now</a>, and <a href="/daily">daily</a>/<a href="/weekly">weekly</a> notes. The page <a href="/hours">hours</a> gives a overview of my office hours.</p>
+<p><a href="/">VSP.ink</a>, <a href="https://social.vsp.ink/@Jacob">social</a>, <a href="/now">now</a>, and <a href="/daily">daily</a>/<a href="/weekly">weekly</a> notes. The page <a href="/hours">hours</a> gives a overview of my office hours. My <a href="/hub">hub</a> page shares relevant links.</p>
 <p>This website is hosted on <a href="https://github.com/campjacob/vsp-ink">GitHub Pages</a>, powered by <a href="https://jekyllrb.com">Jekyll</a> and <a href="https://getbootstrap.com">Bootstrap</a>.</p>
 <p>All of the content is <i class="far fa-copyright"></i> {{ "now" | date: "%Y" }} <a href="https://jacobrcampbell.com">Jacob Campbell</a></p>
 </div>
