--- a/_includes/head.htm
+++ b/_includes/head.htm
@@ -72,6 +72,11 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/src/favicon-16x16.png">
   <link rel="manifest" href="/assets/src/site.webmanifest">
 
+<!-- If Podcast - Include RSS -->
+{% if page.series %}
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }} – {{ page.series | replace: '-', ' ' | capitalize }}" href="{{ '/' | append: page.series | append: '.xml' | absolute_url }}" />
+{% endif %}
+
 <!-- Stylesheets and Scripts -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
